Tweak, fix overflow issue on firefox

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ main {
     z-index: 2;
     box-sizing: border-box;
     max-width: 600px;
-    background-color: rgba(255, 255, 255, .7);
+    background-color: rgba(255, 255, 255, .8);
 }
 
 section {
